Snapserver GetTrieNodes to return empty bytes when trienode doesn't exist
Signed-off-by: Jason Frame <jason.frame@consensys.net>